--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<img class="mt-3 mb-3 ms-4" src="img/js.png" title="JavaScript">
 				<img class="mt-3 mb-3 ms-4" src="img/bootstrap.png" title="Bootstrap5">	
 				
-				<p class="mt-3">Olá, meu nome é Caique Ferreira estudo desenvolmento Web. 
+				<p class="mt-3">Olá, meu nome é Caique Ferreira estudo desenvoimento Web. 
 				Até então essas são algumas tecnologias que eu estou usando.</p>						
 				<p>Gostaria de apresentar meu trabalho através deste portfólio,
 				para mais acesse meu perfil no GitHub.</p>
